Bug 196107 - elftoolchain strip(1) fails to strip some i386 binaries
Summary: elftoolchain strip(1) fails to strip some i386 binaries
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks: 195561
  Show dependency treegraph
 
Reported: 2014-12-18 20:27 UTC by Ed Maste
Modified: 2014-12-30 03:26 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ed Maste freebsd_committer freebsd_triage 2014-12-18 20:27:03 UTC
e.g. from i386 ports exp-run devel/etcd

===>   Generating temporary packing list
/bin/mkdir -p /wrkdirs/usr/ports/devel/etcd/work/stage/usr/local/share/doc/etcd
install  -o root -g wheel -m 0644 /wrkdirs/usr/ports/devel/etcd/work/coreos-etcd-a381ff0/README.md /wrkdirs/usr/ports/devel/etcd/work/stage/usr/local/share/doc/etcd
install  -s -o root -g wheel -m 555 /wrkdirs/usr/ports/devel/etcd/work/coreos-etcd-a381ff0/bin/bench /wrkdirs/usr/ports/devel/etcd/work/stage/usr/local/bin/
strip: moving loadable section,is this intentional?
strip: elf_update() failed: Invalid data buffer descriptor
install: strip command strip failed on /wrkdirs/usr/ports/devel/etcd/work/stage/usr/local/bin//bench
*** Error code 70

Binary from the exp run available at https://people.freebsd.org/~emaste/elftoolchain/bench
Comment 1 Ed Maste freebsd_committer freebsd_triage 2014-12-22 21:04:02 UTC
Upstream elftoolchain ticket 465
https://sourceforge.net/p/elftoolchain/tickets/465/
Comment 2 commit-hook freebsd_committer freebsd_triage 2014-12-30 03:26:22 UTC
A commit references this bug:

Author: emaste
Date: Tue Dec 30 03:25:44 UTC 2014
New revision: 276398
URL: https://svnweb.freebsd.org/changeset/base/276398

Log:
  Update elftoolchain to upstream rev 3136

  This fixes two strip(1) issues found during ports exp-run and adds a
  string hash implementation which significantly speeds up certain
  operations on objects with large numbers of symbols.

  This also improves libdwarf handling for stripped objects with
  .eh_frame or .debug_frame (but not other debug) sections.

  PR:		196107
  Sponsored by:	The FreeBSD Foundation

Changes:
_U  head/contrib/elftoolchain/
  head/contrib/elftoolchain/elfcopy/elfcopy.h
  head/contrib/elftoolchain/elfcopy/sections.c
  head/contrib/elftoolchain/elfcopy/segments.c
  head/contrib/elftoolchain/elfcopy/symbols.c
  head/contrib/elftoolchain/libdwarf/libdwarf_abbrev.c
  head/contrib/elftoolchain/libdwarf/libdwarf_info.c
  head/contrib/elftoolchain/libdwarf/libdwarf_init.c