Update elftoolchain to upstream rev 3136

This fixes two strip(1) issues found during ports exp-run and adds a
string hash implementation which significantly speeds up certain
operations on objects with large numbers of symbols.

This also improves libdwarf handling for stripped objects with
.eh_frame or .debug_frame (but not other debug) sections.

PR:		196107
Sponsored by:	The FreeBSD Foundation

Former-commit-id: 9c97d7a1be0dab392f75dcea3ed121bb4e4791fe