contrib/elftoolchain/elfcopy/sections.c
@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
 begin_comment
-comment|/*-  * Copyright (c) 2007-2011 Kai Wang  * All rights reserved.  *  * Redistribution and use in source and binary forms, with or without  * modification, are permitted provided that the following conditions  * are met:  * 1. Redistributions of source code must retain the above copyright  *    notice, this list of conditions and the following disclaimer.  * 2. Redistributions in binary form must reproduce the above copyright  *    notice, this list of conditions and the following disclaimer in the  *    documentation and/or other materials provided with the distribution.  *  * THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE  * ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE  * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL  * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS  * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)  * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT  * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF  * SUCH DAMAGE.  */
+comment|/*-  * Copyright (c) 2007-2011,2014 Kai Wang  * All rights reserved.  *  * Redistribution and use in source and binary forms, with or without  * modification, are permitted provided that the following conditions  * are met:  * 1. Redistributions of source code must retain the above copyright  *    notice, this list of conditions and the following disclaimer.  * 2. Redistributions in binary form must reproduce the above copyright  *    notice, this list of conditions and the following disclaimer in the  *    documentation and/or other materials provided with the distribution.  *  * THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE  * ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE  * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL  * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS  * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)  * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT  * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF  * SUCH DAMAGE.  */
 end_comment
 
 begin_include
@@ -60,7 +60,7 @@ end_include
 begin_expr_stmt
 name|ELFTC_VCSID
 argument_list|(
-literal|"$Id: sections.c 3126 2014-12-21 08:03:31Z kaiwang27 $"
+literal|"$Id: sections.c 3134 2014-12-23 10:43:59Z kaiwang27 $"
 argument_list|)
 expr_stmt|;
 end_expr_stmt
@@ -2525,7 +2525,7 @@ operator|!
 name|tail
 condition|)
 block|{
-comment|/* shoff of input object is used as a hint. */
+comment|/* 		 * "shoff" of input object is used as a hint for section 		 * resync later. 		 */
 if|if
 condition|(
 name|gelf_getehdr
@@ -3874,6 +3874,28 @@ operator|=
 literal|0
 expr_stmt|;
 block|}
+comment|/* 		 * Ignore TLS sections with load address 0 and without 		 * content. We don't need to adjust their file offset or 		 * VMA, only the size matters. 		 */
+if|if
+condition|(
+name|s
+operator|->
+name|seg_tls
+operator|!=
+name|NULL
+operator|&&
+name|s
+operator|->
+name|type
+operator|==
+name|SHT_NOBITS
+operator|&&
+name|s
+operator|->
+name|off
+operator|==
+literal|0
+condition|)
+continue|continue;
 comment|/* Align section offset. */
 if|if
 condition|(
@@ -5453,6 +5475,21 @@ operator|->
 name|d_version
 expr_stmt|;
 block|}
+comment|/* 	 * Alignment Fixup. libelf does not allow the alignment for 	 * Elf_Data descriptor to be set to 0. In this case we workaround 	 * it by setting the alignment to 1. 	 * 	 * According to the ELF ABI, alignment 0 and 1 has the same 	 * meaning: the section has no alignment constraints. 	 */
+if|if
+condition|(
+name|od
+operator|->
+name|d_align
+operator|==
+literal|0
+condition|)
+name|od
+operator|->
+name|d_align
+operator|=
+literal|1
+expr_stmt|;
 block|}
 end_function
 
